Send image size data along with image to prevent "shifting" during load

--- a/Valour/Client/Components/Windows/ChannelWindows/FileUpload/FileUploadComponent.razor.css
+++ b/Valour/Client/Components/Windows/ChannelWindows/FileUpload/FileUploadComponent.razor.css
@@ -4,8 +4,11 @@
 }
 
 ::deep img {
-    max-height: 80vh;
-    max-width: 80vw;
+    max-height: 75vh;
+    max-width: 75vw;
+
+    width: 100%;
+    height: 100%;
 }
 
 ::deep video {
